--- a/Aula 15 - Laboratório de Interpolação.ipynb
+++ b/Aula 15 - Laboratório de Interpolação.ipynb
@@ -62,6 +62,7 @@
    "outputs": [],
    "source": [
     "def escolheIntervalo(x,y,xalvo,n):\n",
+    "      \n",
     "    \n",
     "    \n",
     "    \n",
@@ -201,6 +202,11 @@
    "outputs": [],
    "source": [
     "def lagrange(x,y,xalvo):\n",
+    "    yalvo=0\n",
+    "    for i in range(len(y)):\n",
+    "        div=1\n",
+    "        div*= (xalvo-x[j])/(x[i]-x[j]) for j in range(len(x)) if i != j\n",
+    "        yalvo+=y[i]*div\n",
     "    \n",
     "    return yalvo"
    ]
@@ -223,7 +229,16 @@
    "outputs": [],
    "source": [
     "def lagranged(x,y,xalvo):\n",
-    "    \n",
+    "    yalvo=0\n",
+    "    for i in range(len(y)):\n",
+    "        num=1\n",
+    "        den=1\n",
+    "        for j in range(len(x)):\n",
+    "            if i!=j:\n",
+    "                num*=(xalvo-x[j])\n",
+    "                den*=(x[i]-x[j])\n",
+    "        yavlo+=y[i]*(num/den)\n",
+    "        \n",
     "    return yalvo"
    ]
   },
@@ -327,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
