--- a/Aula 15 - Exercicios de Interpolação.ipynb
+++ b/Aula 15 - Exercicios de Interpolação.ipynb
@@ -24,14 +24,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "ano = np.array([1950,1960,1970,1980,1991,2000])\n",
-    "populacao = np.array([139620,173706,311622,633392,1011500,1403796])"
+    "ano = np.array([1950,1960,1970,1980,1991,2000],dtype='float')\n",
+    "populacao = np.array([139620,173706,311622,633392,1011500,1403796],dtype='float')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eliminacaoGaussianaSimples(A,b):\n",
+    "    Au = np.zeros(A.shape)\n",
+    "    Ax = np.concatenate((A,b.reshape(len(b),1)),axis=1)\n",
+    "    for i in range(len(Ax)-1):\n",
+    "        Ax[i+1:] -= (Ax[i+1:,i]/Ax[i][i]).reshape((len(Au[i+1:]),1))*Ax[i]\n",
+    "        \n",
+    "    return resolveTS(Ax[:,:len(b)],Ax[:,len(b)])\n",
+    "\n",
+    "def resolveTS(A,b): #A Triangular Superior\n",
+    "    x = np.zeros(len(A))\n",
+    "    for i in range(len(A)-1,-1,-1):\n",
+    "        x[i] = (b[i] - (A[i][i+1:]*x[i+1:]).sum())/A[i][i]\n",
+    "        \n",
+    "    return x\n",
+    "\n",
+    "def resolveTI(A,b): #A Triangular Inferior\n",
+    "    x = np.zeros(len(b))\n",
+    "    for i in range(len(b)):\n",
+    "        x[i] = (b[i] - (A[i][:i]*x[:i]).sum())/A[i][i]\n",
+    "        \n",
+    "    return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resolvePoli(c,x):\n",
+    "    z=np.array(([x**j*c[len(c)-1-j] for j in range(len(c))]))   \n",
+    "    return z.sum()\n",
+    "\n",
+    "def escolheIntervalo(x,y,xalvo,n):\n",
+    "    vx = np.copy(x)\n",
+    "    vy = np.copy(y)\n",
+    "    dif = np.abs(xalvo - x)\n",
+    "    for m in range(len(x)-n):\n",
+    "        m = np.argmax(dif)\n",
+    "        vx = np.delete(vx,m)\n",
+    "        vy = np.delete(vy,m)\n",
+    "        dif = np.delete(dif,m)\n",
+    "        \n",
+    "    return vx,vy\n",
+    "\n",
+    "def interpoli(x,y):\n",
+    "    m=np.zeros((len(x),len(x)),dtype='float')\n",
+    "    for i in range(len(x)):\n",
+    "        m[:,i]=x**(len(x)-i-1)\n",
+    "        \n",
+    "    return eliminacaoGaussianaSimples(m,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Habitantes de 1958:\n",
+      "[1950. 1960. 1970.] [139620. 173706. 311622.]\n",
+      "158582.0\n",
+      "Com 3 pontos: 158582.0\n",
+      "4 pontos: 161143.0\n",
+      "Diferença entre os pontos: 2561.0\n",
+      "Habitantes de 1988:\n",
+      "3 pontos: 897322.0\n",
+      "4 pontos: 900741.0\n",
+      "Diferença entre os pontos: 3419.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Habitantes de 1958:\")\n",
+    "x, y = escolheIntervalo(ano,populacao,1958,3)\n",
+    "print(x,y)\n",
+    "p0 = round(resolvePoli(interpoli(x,y),1958))\n",
+    "print(p0)\n",
+    "print(\"Com 3 pontos:\",p0)\n",
+    "x, y = escolheIntervalo(ano,populacao,1958,4)\n",
+    "p = round(resolvePoli(interpoli(x,y),1958))\n",
+    "print(\"4 pontos:\",p)\n",
+    "print(\"Diferença entre os pontos:\",p-p0)\n",
+    "\n",
+    "print(\"Habitantes de 1988:\")\n",
+    "x, y = escolheIntervalo(ano,populacao,1988,3)\n",
+    "p0 = round(resolvePoli(interpoli(x,y),1988))\n",
+    "print(\"3 pontos:\",p0)\n",
+    "x, y = escolheIntervalo(ano,populacao,1988,4)\n",
+    "p = round(resolvePoli(interpoli(x,y),1988))\n",
+    "print(\"4 pontos:\",p)\n",
+    "print(\"Diferença entre os pontos:\",p-p0)"
    ]
   },
   {
@@ -55,7 +158,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "fx=np.array([1,2,0,0,10])\n",
+    "x=resolvePoli(fx,0.1)\n",
+    "y=resolvePoli(fx,0.2)\n",
+    "z=resolvePoli(fx,0.3)\n",
+    "escolheIntervalo(fx,np.array([x,y,z]),0.15,)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,33 +244,6 @@
     "plt.legend(loc='upper left')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3 - Agora vamos verificar em quais situações cada método é mais rápido. Apesar de ser mais complexa, assim como a decomposição LU, a interpolação polinomial se torna mais vantajosa quanto mais pontos eu quiser encontrar no intervalo. O mesmo ocorre com o polinômio de Newton, já que as diferenças divididas só devem ser computadas uma vez. Desta forma, para cada um destes métodos, deve haver um número de interpolações usando os mesmos pontos em que eles serão mais rápidos que o Lagrange.\n",
-    "\n",
-    "O que você deve fazer: Comparar o tempo de execução de pre-computar os dois métodos apenas uma vez e com eles achar __X__ pontos com rodar o Lagrange __X__ vezes.\n",
-    "\n",
-    "Para fazer esta comparação, use as seguintes funções:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Faça um gráfico com o tempo de execução das três para diferentes valores de N, para mostrar em que ponto o Polinomial e o Newton são mais vantajosos que o Lagrange:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
